--- a/WpfTemplate/WpfTemplate.csproj
+++ b/WpfTemplate/WpfTemplate.csproj
@@ -104,6 +104,9 @@
     <Compile Include="Expressions\ExpressionHelpers.cs" />
     <Compile Include="Log\Log.cs" />
     <Compile Include="Security\SecureStringHelpers.cs" />
+    <Compile Include="StartCapture.xaml.cs">
+      <DependentUpon>StartCapture.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\Base\BaseViewModel.cs" />
     <Compile Include="ViewModels\Base\IHavePassword.cs" />
     <Compile Include="ViewModels\Base\RelayCommand.cs" />
@@ -121,6 +124,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="StartCapture.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\Buttons.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -206,6 +213,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ScreenCapture\ScreenCapture.csproj">
+      <Project>{d008f89c-e61e-484a-a8fb-2940dd68890b}</Project>
+      <Name>ScreenCapture</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.2.2.1.0\build\net452\Fody.targets" Condition="Exists('..\packages\Fody.2.2.1.0\build\net452\Fody.targets')" />
